Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-20981

tst_qhttpnetworkconnection is unstable

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.0.0
    • 5.0.0
    • Network
    • None
    • qtbase 7465b55d9c1c8586da7384fbf97604ed020a4fd3
      Ubuntu 10.04 x86 32-bit
      Qt configured with -qpa and using QT_QPA_PLATFORM=xcb
    • 13df02ad044cca3c0414f5e34c57fe04b69b414c

      This autotest crashes sometimes (but not always).

      [rmcgover@bq-menoetius qhttpnetworkconnection]$ while make check TESTARGS=getMultiple; do date; done                             8455b13feeb144..
      ./tst_qhttpnetworkconnection getMultiple
      QObject::connect: Cannot connect (null)::destroyed() to QHostInfoLookupManager::waitForThreadPoolDone()
      ********* Start testing of tst_QHttpNetworkConnection *********
      Config: Using QTest library 5.0.0, Qt 5.0.0
      PASS   : tst_QHttpNetworkConnection::initTestCase()
      QDEBUG : tst_QHttpNetworkConnection::getMultiple(6 connections, no pipelining, 100 requests) === 344 msec === 
      QDEBUG : tst_QHttpNetworkConnection::getMultiple(1 connection, no pipelining, 100 requests) === 288 msec === 
      QDEBUG : tst_QHttpNetworkConnection::getMultiple(6 connections, pipelining allowed, 100 requests) === 466 msec === 
      QDEBUG : tst_QHttpNetworkConnection::getMultiple(1 connection, pipelining allowed, 100 requests) === 226 msec === 
      PASS   : tst_QHttpNetworkConnection::getMultiple()
      PASS   : tst_QHttpNetworkConnection::cleanupTestCase()
      Totals: 3 passed, 0 failed, 0 skipped
      ********* Finished testing of tst_QHttpNetworkConnection *********
      Thu Aug 18 13:04:03 EST 2011
      ./tst_qhttpnetworkconnection getMultiple
      QObject::connect: Cannot connect (null)::destroyed() to QHostInfoLookupManager::waitForThreadPoolDone()
      ********* Start testing of tst_QHttpNetworkConnection *********
      Config: Using QTest library 5.0.0, Qt 5.0.0
      PASS   : tst_QHttpNetworkConnection::initTestCase()
      QDEBUG : tst_QHttpNetworkConnection::getMultiple(6 connections, no pipelining, 100 requests) === 572 msec === 
      QDEBUG : tst_QHttpNetworkConnection::getMultiple(1 connection, no pipelining, 100 requests) === 277 msec === 
      QDEBUG : tst_QHttpNetworkConnection::getMultiple(6 connections, pipelining allowed, 100 requests) === 340 msec === 
      QDEBUG : tst_QHttpNetworkConnection::getMultiple(1 connection, pipelining allowed, 100 requests) === 225 msec === 
      PASS   : tst_QHttpNetworkConnection::getMultiple()
      PASS   : tst_QHttpNetworkConnection::cleanupTestCase()
      Totals: 3 passed, 0 failed, 0 skipped
      ********* Finished testing of tst_QHttpNetworkConnection *********
      Thu Aug 18 13:04:04 EST 2011
      ./tst_qhttpnetworkconnection getMultiple
      QObject::connect: Cannot connect (null)::destroyed() to QHostInfoLookupManager::waitForThreadPoolDone()
      ********* Start testing of tst_QHttpNetworkConnection *********
      Config: Using QTest library 5.0.0, Qt 5.0.0
      PASS   : tst_QHttpNetworkConnection::initTestCase()
      QDEBUG : tst_QHttpNetworkConnection::getMultiple(6 connections, no pipelining, 100 requests) === 423 msec === 
      QDEBUG : tst_QHttpNetworkConnection::getMultiple(1 connection, no pipelining, 100 requests) === 277 msec === 
      QDEBUG : tst_QHttpNetworkConnection::getMultiple(6 connections, pipelining allowed, 100 requests) === 459 msec === 
      QDEBUG : tst_QHttpNetworkConnection::getMultiple(1 connection, pipelining allowed, 100 requests) === 225 msec === 
      
      PASS   : tst_QHttpNetworkConnection::getMultiple()
      PASS   : tst_QHttpNetworkConnection::cleanupTestCase()
      Totals: 3 passed, 0 failed, 0 skipped
      ********* Finished testing of tst_QHttpNetworkConnection *********
      Thu Aug 18 13:04:06 EST 2011
      ./tst_qhttpnetworkconnection getMultiple
      QObject::connect: Cannot connect (null)::destroyed() to QHostInfoLookupManager::waitForThreadPoolDone()
      ********* Start testing of tst_QHttpNetworkConnection *********
      Config: Using QTest library 5.0.0, Qt 5.0.0
      PASS   : tst_QHttpNetworkConnection::initTestCase()
      QDEBUG : tst_QHttpNetworkConnection::getMultiple(6 connections, no pipelining, 100 requests) === 420 msec === 
      QDEBUG : tst_QHttpNetworkConnection::getMultiple(1 connection, no pipelining, 100 requests) === 278 msec === 
      QDEBUG : tst_QHttpNetworkConnection::getMultiple(6 connections, pipelining allowed, 100 requests) === 377 msec === 
      QFATAL : tst_QHttpNetworkConnection::getMultiple(1 connection, pipelining allowed, 100 requests) ASSERT: "!channels[1].isSocketBusy()" in file access/qhttpnetworkconnection.cpp, line 922
      FAIL!  : tst_QHttpNetworkConnection::getMultiple(1 connection, pipelining allowed, 100 requests) Received a fatal error.
         Loc: [Unknown file(0)]
      Totals: 1 passed, 1 failed, 0 skipped
      ********* Finished testing of tst_QHttpNetworkConnection *********
      make: *** [check] Aborted
      

      A test log with backtrace is available at http://pulse.test.qt.nokia.com:8080/file/artifacts/127687456/_artifacts/test-logs/tst_qhttpnetworkconnection-00.txt (Nokia LAN)

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            xcm Martin Petersson (Inactive)
            rmcgover Rohan McGovern (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes